--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ hr {
 	padding: 0;
 	margin: 0 auto;
 	width: 100%;
-	max-width: 1000px;
+	max-width: 900px;
 }
 
 .header {
@@ -169,11 +169,16 @@ hr {
 		justify-content: space-between;
 		align-items: center;
 	}
+	.container{
+		display: flex;
+		flex-direction: row;
+	}
 
 	.main-article {
 		width: 60%;
 		border-radius: 0.6rem;
 		margin: 0;
+		
 	}
 
 	.main-sidebar {
@@ -181,4 +186,6 @@ hr {
 		border-radius: 0.6rem;
 		margin: 0;
 	}
+
+	
 }
